<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#FFF"
    android:id="@+id/register_activity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:visibility="visible"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nickname"
        android:layout_marginTop="170sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="25sp"
        android:hint="@string/enter_nickname"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="25sp"
        android:hint="@string/enter_the_email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="25sp"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="register"
        android:textSize="25sp"
        android:textColor="#FFFF" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:text="@string/already_have_the_account"
            android:textSize="20sp"
            android:backgroundTint="@color/grey" />

    </RelativeLayout>

</LinearLayout>
