<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10sp">


    <LinearLayout android:layout_width="fill_parent"
        android:id="@+id/linearLayout1"
        android:layout_height="wrap_content"
         >

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="169dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:maxWidth="200dp"
            android:maxHeight="300dp"
            android:minHeight="200dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:visibility="visible"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10sp"
            >


            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:layout_gravity="right"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/email"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/button_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/show_sent_messages"
                android:layout_gravity="right"
                android:layout_marginTop="10sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingVertical="20sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:paddingVertical="20sp"
            android:src="@android:drawable/sym_action_chat"
            app:backgroundTint="@color/colorPrimary"
            app:borderWidth="@dimen/activity_horizontal_margin"
            app:maxImageSize="40dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/record_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_weight="1"
            android:clickable="true"
            android:longClickable="true"
            android:src="@drawable/mic"
            android:text="@string/google_voice_assistant"
            app:backgroundTint="@color/magentaPink"
            app:fabSize="normal"
            app:maxImageSize="40dp"
            tools:style="@style/Widget.AppCompat.Button.Borderless" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>